# gpt_react_repl_w_method_search

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
env/: README.md  react_repl_agent.yml
notebooks/: react_repl_agent.ipynb  run_batch.ipynb
react_logs/gpt-3.5-turbo/2023/04/07/: A_print_date__gpt-3.5-turbo__2023_04_07__14-38-54.md  A_print_date__gpt-3.5-turbo__2023_04_07__14-38-54.txt  B_Weather_MyLocation_Discord__gpt-3.5-turbo__2023_04_07__14-39-24.md  B_Weather_MyLocation_Discord__gpt-3.5-turbo__2023_04_07__14-39-24.txt  C_Weather_London_Slack__gpt-3.5-turbo__2023_04_07__14-40-32.md  C_Weather_London_Slack__gpt-3.5-turbo__2023_04_07__14-40-32.txt  D_Weather_Emoji_MyLocation_Discord__gpt-3.5-turbo__2023_04_07__14-41-43.md  E_NASA_Discord__gpt-3.5-turbo__2023_04_07__14-44-14.md  (+4 more)
secrets/: README.md  alpha_vantage.key.example  discord_webhook.key.example  nasa.key.example  openai_api.key.example  slack.json.key.example
src/react_repl_agent/: llm_api.py  methods.py
src/react_repl_agent/agent_steps/: react_steps.py  repl_call_method.py
src/react_repl_agent/agent_steps/prompts/: react_initial.jinja2  react_step_1.jinja2  task_decomposition.jinja2
src/react_repl_agent/apis/: dict_keyerror_reference.py  discord.py  image.py  location.py  nasa.py  open_meteo.py  slack.py  stock_prices.py  table.py  utils.py
src/react_repl_agent/method_index/: doc_utils.py  index_methods.py  utils.py
src/react_repl_agent/utils/: exceptions.py  output_format_logger.py  timedelta.py
tools/: README.md  run_all.sh  run_formatting.sh  run_linters.sh
(+24 files in other folders)
