[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.ruff]
extend-select = [
    "I001"  # isort
]
line-length = 88
ignore = [
  'E501',  # Line too long (E501)
  'E731',  # Do not assign a lambda expression, use a def (E731)
]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
]
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
