[metadata]
name = react_repl_agent
version = 0.0.1
description = ReAct Agent Experiments.
long_description = file: README.md
license = Mozilla Public License 2.0
url = https://github.com/peterroelants/gpt_react_repl_w_method_search
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages=find:
package_dir=
    =src
include_package_data = True
python_requires = >=3.9, <4


[options.packages.find]
where=src
exclude=
    env/
    notebooks/
    tools/

[options.package_data]
python_project_template = py.typed

[options.extras_require]
dev =
    mypy
    pytest
